--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="name">Name:</string>
     <string name="count">count</string>
     <string name="save">Сохранить</string>
+    <string name="count_caps">Count</string>
 </resources>
